# genp

./: Cargo.toml  README.md
src/: charlist.rs  lib.rs  wordlist.rs
src/wordlist/: english.rs
