[package]
name = "genp"
version = "0.1.0"
authors = ["Joshua Cooper <joshua@cooper.cx>"]
edition = "2018"
license = "ISC"
description = "A library for generating passwords and passphrases."
keywords = ["password", "passphrase", "diceware", "generate"]
repository = "https://github.com/joshua-cooper/genp"

[dependencies]
rand = "0.7.2"
